--- a/scss/pdp.scss
+++ b/scss/pdp.scss
@@ -201,5 +201,52 @@ main {
         }
     }
 }
-// @media(min-width: 768px) and (max-width: 1279px){
-// }
+@media (min-width: 320px) and (max-width: 767px){
+    html {
+        scroll-behavior: smooth;
+    }
+    main {
+        margin: 0;
+        padding: 0;
+        body {
+            padding: 0; 
+        }
+        .products-block {
+            display: none;
+        }
+        .latest-posts {
+            width: 100vw;
+            margin-left: 0;
+            color: rgb(69, 65, 62);
+            background-color: inherit;
+            h2 {
+                text-align: center;
+                font-weight: bold;
+                font-size: 18px;
+                width: auto;
+            }
+            h2::before, h2::after {
+                content: '';
+                flex: 1;
+                border-bottom: 2px solid rgba(255, 255, 255, 1);
+            }
+            h2:not(:empty)::before {
+                margin: 0 .5em;
+            }
+            h2:not(:empty)::after {
+                margin: 0 .5em;
+            }
+            .posts {
+                .post {
+                    background-color: #fff;
+                    margin: 20px;
+                    height: auto;
+                }
+            }
+            .btnGreen {
+                margin: 50px auto 0;
+                display: block;
+            }
+        }
+    }
+}
